feat: show reactors who reacted to highlights
