# src/highlight/dtos/highlight-options.dto.ts
@@ -17,3 +17,14 @@ export class DbUserHighlightReactionResponse extends PickType(DbUserHighlightRea
   "emoji_id",
   "reaction_count",
 ]) {}
+
+export class DbUserHighlightReactorResponse extends PickType(DbUserHighlightReaction, ["emoji_id", "reaction_count"]) {
+  @ApiPropertyOptional({
+    description: "Usernames of users who reacted with this emoji",
+    example: ["RitaDee", "diivi"],
+    isArray: true,
+  })
+  @IsString({ each: true })
+  @IsOptional()
+  readonly reaction_users?: string[];
+}
